--- a/config/content.htm
+++ b/config/content.htm
@@ -3,7 +3,7 @@
 <h1>hw</h1>
 <h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
-<p><button id="add1to100">1 add to 100</button></p>
+<p><button id="add1to100">缺考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
@@ -51,7 +51,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+        url = "https://gist.githubusercontent.com/Yao-Hsien41023241/68a4b450f210cb854d72d188c0fe1384/raw/0e25b266daf4a3aeed47252db0da718229f79373/hw-w10.py"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -86,7 +86,7 @@ def clear_bd1(ev):
 # 利用 ace 中的 Editor 建立 Ace 物件, 其中的輸入變數分別對應到頁面中的編輯區物件
 Ace2 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
 
-add1to100_url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+add1to100_url = "https://gist.githubusercontent.com/Yao-Hsien41023241/68a4b450f210cb854d72d188c0fe1384/raw/0e25b266daf4a3aeed47252db0da718229f79373/hw-w10.py"
 
 # 從 gist 取得程式碼
 add_src = open(add1to100_url).read()
@@ -178,10 +178,9 @@ run1()
 <script src="/static/SVGpathUtils-6v03-min.js"></script>
 <script src="/static/sylvester.js"></script>
 <script src="/static/PrairieDraw.js"></script>
-</p>
-<h2>w11</h2>
+</p><h2>w11</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
-<p><button id="add1to100">1 add to 100</button></p>
+<p><button id="add1to100">w11缺考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
 <!-- 導入 brython 程式庫 -->
 <script src="/static/brython.js"></script>
@@ -229,7 +228,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+        url = "https://gist.githubusercontent.com/Yao-Hsien41023241/212469eb37f6c58e7fed066b93ed9320/raw/d3eb5ab534fbf985e2c9abcb0258dd67b0a31b50/w11.py"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -264,7 +263,7 @@ def clear_bd1(ev):
 # 利用 ace 中的 Editor 建立 Ace 物件, 其中的輸入變數分別對應到頁面中的編輯區物件
 Ace2 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
 
-add1to100_url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+add1to100_url = "https://gist.githubusercontent.com/Yao-Hsien41023241/212469eb37f6c58e7fed066b93ed9320/raw/d3eb5ab534fbf985e2c9abcb0258dd67b0a31b50/w11.py"
 
 # 從 gist 取得程式碼
 add_src = open(add1to100_url).read()
@@ -356,8 +355,7 @@ run1()
 <script src="/static/SVGpathUtils-6v03-min.js"></script>
 <script src="/static/sylvester.js"></script>
 <script src="/static/PrairieDraw.js"></script>
-</p>
-<h1>Brython</h1>
+</p><h1>Brython</h1>
 <p>將 iterable 與 iterator <a h1="" href='/"https:/gist.githubusercontent.com/Yao-Hsien41023241/68a4b450f210cb854d72d188c0fe1384/raw/d653030415613d6177aff70118a929b5de98dcf7/hw-w10.py'>Brython</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Python_(programming_language)">https://en.wikipedia.org/wiki/Python_(programming_language)</a></p>
 <h4>Examples:</h4>
