--- a/content/w10.html
+++ b/content/w10.html
@@ -143,7 +143,7 @@ img.add_border {
         </header>
     <div id="tipue_search_content">hw << <a href='hw.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
-<p><button id="add1to100">1 add to 100</button></p>
+<p><button id="add1to100">缺考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
 <!-- 導入 brython 程式庫 -->
 <script src="./../cmsimde/static/brython.js"></script>
@@ -191,7 +191,7 @@ def run1():
     try:
         url = doc.query["src"]
     except:
-        url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+        url = "https://gist.githubusercontent.com/Yao-Hsien41023241/68a4b450f210cb854d72d188c0fe1384/raw/0e25b266daf4a3aeed47252db0da718229f79373/hw-w10.py"
     prog = open(url).read()
 
     # 將程式載入編輯區
@@ -226,7 +226,7 @@ def clear_bd1(ev):
 # 利用 ace 中的 Editor 建立 Ace 物件, 其中的輸入變數分別對應到頁面中的編輯區物件
 Ace2 = ace.Editor(editor_id="kw_editor1", console_id="kw_console1", container_id="kw__container1", storage_id="kw_py_src1" )
 
-add1to100_url = "https://gist.githubusercontent.com/41023226/0a564f889bb26fce1c2784d83b40547b/raw/646beb0920320ef75ce5f6b1e7d3a4186f442ed8/w10"
+add1to100_url = "https://gist.githubusercontent.com/Yao-Hsien41023241/68a4b450f210cb854d72d188c0fe1384/raw/0e25b266daf4a3aeed47252db0da718229f79373/hw-w10.py"
 
 # 從 gist 取得程式碼
 add_src = open(add1to100_url).read()
@@ -318,8 +318,7 @@ run1()
 <script src="./../cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="./../cmsimde/static/sylvester.js"></script>
 <script src="./../cmsimde/static/PrairieDraw.js"></script>
-</p>
-<br />hw << <a href='hw.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
+</p><br />hw << <a href='hw.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
         
     <!-- footer -->
       <div class="container">
