--- a/content/w11.html
+++ b/content/w11.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -318,7 +318,8 @@ run1()
 <script src="./../cmsimde/static/SVGpathUtils-6v03-min.js"></script>
 <script src="./../cmsimde/static/sylvester.js"></script>
 <script src="./../cmsimde/static/PrairieDraw.js"></script>
-</p><br />w10 << <a href='w10.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+</p>
+<br />w10 << <a href='w10.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
