--- a/config/content.htm
+++ b/config/content.htm
@@ -15,7 +15,8 @@ var winkVideoData = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 --></p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/w6-01.mp4" type="video/mp4"/></video></div><h2>w10</h2>
+<source src="/downloads/w6-01.mp4" type="video/mp4"/></video></div>
+<h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">缺考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
@@ -362,7 +363,8 @@ run1()
 <p><!-- 程式執行 ouput 區 --></p>
 <div style="width: 100%; height: 100%;"><textarea autocomplete="off" id="kw_console2"></textarea></div>
 <p><!-- Brython 程式執行的結果, 都以 brython_div 作為切入位置 --></p>
-<div id="brython_div2"></div>
+<h2 id="brython_div2">w12</h2>
+<div></div>
 <!-- editor2 結束 -->
 <p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
 <script src="/static/Cango-24v03-min.js"></script>
