--- a/content/w12.html
+++ b/content/w12.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,9 +141,17 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>About</h1>
-<p>cmsite</p>
-<br /> <a href='hw.html'>Next</a> >> hw</div>
+    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>w12</h1>
+<div></div>
+<!-- editor2 結束 -->
+<p><!-- 導入 gearUtils-0.9.js Cango 齒輪繪圖程式庫 -->
+<script src="./../cmsimde/static/Cango-24v03-min.js"></script>
+<script src="./../cmsimde/static/gearUtils-09.js"></script>
+<script src="./../cmsimde/static/SVGpathUtils-6v03-min.js"></script>
+<script src="./../cmsimde/static/sylvester.js"></script>
+<script src="./../cmsimde/static/PrairieDraw.js"></script>
+</p>
+<br />w11 << <a href='w11.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
