--- a/content/w12.html
+++ b/content/w12.html
@@ -173,7 +173,10 @@ var winkVideoData = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w12-2.mp4" type="video/mp4"/></video></div><br />w11 << <a href='w11.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<source src="./../downloads/w12-2.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">零件3</div>
+<div class="winkVideoContainerClass"></div><br />w11 << <a href='w11.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
