--- a/content/w12.html
+++ b/content/w12.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li><a href='w12.html'>w12</a><li><a href='w14.html'>w14</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>w12</h1>
+    <div id="tipue_search_content">w11 << <a href='w11.html'>Previous</a> <a href='w14.html'>Next</a> >> w14<br /><h1>w12</h1>
 <p>零件1</p>
 <script>
 var winkVideoData = {
@@ -189,7 +189,8 @@ var winkVideoData = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w12-03.mp4" type="video/mp4"/></video></div><br />w11 << <a href='w11.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+<source src="./../downloads/w12-03.mp4" type="video/mp4"/></video></div>
+<br />w11 << <a href='w11.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
