--- a/content/solvespace.html
+++ b/content/solvespace.html
@@ -189,7 +189,24 @@ var winkVideoData = {
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w12-03.mp4" type="video/mp4"/></video></div><br />w13 << <a href='w13.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<source src="./../downloads/w12-03.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">組合</div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/w14-solvespace.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">組合</div><br />w13 << <a href='w13.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
