--- a/config/content.htm
+++ b/config/content.htm
@@ -486,7 +486,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass">零件3</div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div><h3>nx</h3>
-<p>01</p>
+<p>零件1</p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -535,7 +535,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/nx w14-03.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"><a href="/downloads/nx.zip">w14 nx</a></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div><h1>Brython</h1>
 <p>將 iterable 與 iterator <a h1="" href='/"https:/gist.githubusercontent.com/Yao-Hsien41023241/68a4b450f210cb854d72d188c0fe1384/raw/d653030415613d6177aff70118a929b5de98dcf7/hw-w10.py'>Brython</a></p>
