--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -429,7 +429,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/w14-solvespace.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass">組合</div><h2>w14</h2>
+<div class="winkVideoContainerClass"><a href="/downloads/w14-solvespace.zip">w14 solvespace</a></div><h2>w14</h2>
 <h3>onshape</h3>
 <p>零件1</p>
 <script>
@@ -486,7 +486,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass">零件3</div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div><h3>nx</h3>
-<p>01</p>
+<p>零件1</p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
