--- a/content/solvespace.html
+++ b/content/solvespace.html
@@ -206,7 +206,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/w14-solvespace.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass">組合</div><br />w13 << <a href='w13.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
+<div class="winkVideoContainerClass"><a href="./../downloads/w14-solvespace.zip">w14 solvespace</a></div><br />w13 << <a href='w13.html'>Previous</a> <a href='w14.html'>Next</a> >> w14</div>
         
     <!-- footer -->
       <div class="container">
