--- a/content/nx.html
+++ b/content/nx.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">onshape << <a href='onshape.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>nx</h1>
-<p>01</p>
+<p>零件1</p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -191,7 +191,26 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/nx w14-03.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">組合</div>
+<div class="winkVideoContainerClass"><a href="./../downloads/nx.zip">w14 nx</a></div>
 <div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/nx組合.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">組合</div>
+<div class="winkVideoContainerClass"><a href="./../downloads/nx組合.zip">組合</a></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div><br />onshape << <a href='onshape.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
