--- a/config/content.htm
+++ b/config/content.htm
@@ -446,8 +446,7 @@ var winkVideoData = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/onshape-01.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass">零件2</div>
@@ -465,8 +464,7 @@ var winkVideoData = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/onshape-02.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass">零件3</div>
@@ -483,8 +481,7 @@ var winkVideoData = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/onshape-03.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass">組合</div>
@@ -501,14 +498,12 @@ var winkVideoData = {
 };
 </script>
 <!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/onshape組合.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
-<h3>nx</h3>
+<div class="winkVideoContainerClass"></div><h3>nx</h3>
 <p>零件1</p>
 <script>
 var winkVideoData = {
