--- a/content/index.html
+++ b/content/index.html
@@ -142,8 +142,8 @@ img.add_border {
         </header>
     <div id="tipue_search_content"> <a href='hw.html'>Next</a> >> hw<br /><h1>About</h1>
 <p>cmsite</p>
-<p>倉儲連結:<a href="https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html">https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html</a></p>
-<p>網站連結:<a href="https://github.com/mdecad2022/site-Yao-Hsien41023241">https://github.com/mdecad2022/site-Yao-Hsien41023241</a></p><br /> <a href='hw.html'>Next</a> >> hw</div>
+<p>網站連結:<a href="https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html">https://mdecad2022.github.io/site-Yao-Hsien41023241/content/index.html</a></p>
+<p>倉儲連結:<a href="https://github.com/mdecad2022/site-Yao-Hsien41023241">https://github.com/mdecad2022/site-Yao-Hsien41023241</a></p><br /> <a href='hw.html'>Next</a> >> hw</div>
         
     <!-- footer -->
       <div class="container">
