--- a/config/content.htm
+++ b/config/content.htm
@@ -455,6 +455,25 @@ var winkVideoData = {
 <div class="winkVideoContainerClass">零件2</div>
 <div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/861116b9c3fbfd5837f9f894/w/2a5195b25f3f3e1f556a3284/e/3e993a47a2fa9a74cde4b13c">02</a></div>
 <div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="/downloads/onshape-02.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">零件3</div>
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/e9500446fdb9d99332b41cd1/w/ced38b80d793ddcac7f2bd88/e/e2eb0399ed41629aec8e7593">03</a></div>
 <div class="winkVideoContainerClass"></div><h3>nx</h3>
 <p>零件1</p>
 <script>
