--- a/content/onshape.html
+++ b/content/onshape.html
@@ -182,6 +182,25 @@ var winkVideoData = {
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass">零件3</div>
 <div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/e9500446fdb9d99332b41cd1/w/ced38b80d793ddcac7f2bd88/e/e2eb0399ed41629aec8e7593">03</a></div>
+<div class="winkVideoContainerClass"></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<!-- 接下來將 mp4 檔案從 downloads 目錄取出 -->
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/onshape-03.mp4" type="video/mp4"/></video></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass"></div>
+<div class="winkVideoContainerClass">組合</div>
+<div class="winkVideoContainerClass"><a href="https://cad.onshape.com/documents/a0ad2051e77065416e680c2f/w/8f54b613081ab4dbeb788992/e/ab71fd3e442c34e243ee41fa">組合onshape</a></div>
 <div class="winkVideoContainerClass"></div><br />w14 << <a href='w14.html'>Previous</a> <a href='nx.html'>Next</a> >> nx</div>
         
     <!-- footer -->
