--- a/config/content.htm
+++ b/config/content.htm
@@ -6,6 +6,8 @@
 <h2>w6</h2>
 <h3>onshape</h3><h3>NX</h3>
 <p>column support</p>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="/downloads/w6-01.mp4" type="video/mp4"/></video></div>
 <p>
 <script>
 var winkVideoData = {
