--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -18,14 +18,13 @@ var winkVideoData = {
 };
 </script>
 </p>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/w6-01.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass">column</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="/downloads/column.mp4" type="video/mp4"/></video></div>
 <div class="winkVideoContainerClass"></div>
 <div class="winkVideoContainerClass"></div>
+<p>
 <script>
 var winkVideoData = {
   dataVersion: 1,
@@ -36,11 +35,10 @@ var winkVideoData = {
   },
 };
 </script>
+</p>
 <div class="winkVideoContainerClass">table-1</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="/downloads/table-1.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div><h2>w10</h2>
+<source src="/downloads/table-1.mp4" type="video/mp4"/></video></div><h2>w10</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">缺考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
