--- a/content/w10.html
+++ b/content/w10.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='nx.html'>nx</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li class='has-children'><a href='w6.html'>w6</a><ul class='dropdown'><li><a href='onshape-1.html'>onshape-1</a><li><a href='NX.html'>NX</a></li></ul><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape-2.html'>onshape-2</a><li><a href='nx.html'>nx</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10</h1>
+    <div id="tipue_search_content">NX << <a href='NX.html'>Previous</a> <a href='w11.html'>Next</a> >> w11<br /><h1>w10</h1>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">缺考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
@@ -319,7 +319,7 @@ run1()
 <script src="./../cmsimde/static/sylvester.js"></script>
 <script src="./../cmsimde/static/PrairieDraw.js"></script>
 </p>
-<br />w6 << <a href='w6.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
+<br />NX << <a href='NX.html'>Previous</a> <a href='w11.html'>Next</a> >> w11</div>
         
     <!-- footer -->
       <div class="container">
