--- a/content/w6.html
+++ b/content/w6.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li><a href='w6.html'>w6</a><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='nx.html'>nx</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li class='has-children'><a href='w6.html'>w6</a><ul class='dropdown'><li><a href='onshape-1.html'>onshape-1</a><li><a href='NX.html'>NX</a></li></ul><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape-2.html'>onshape-2</a><li><a href='nx.html'>nx</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='w16.html'>w16</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,28 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">hw << <a href='hw.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>w6</h1>
-<p>column support</p>
-<p>
-<script>
-var winkVideoData = {
-  dataVersion: 1,
-  frameRate: 8,
-  buttonFrameLength: 4,
-  buttonFrameOffset: 2,
-  frameStops: {
-  },
-};
-</script>
-</p>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/w6-01.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass">column</div>
-<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/column.mp4" type="video/mp4"/></video></div>
-<div class="winkVideoContainerClass"></div>
-<div class="winkVideoContainerClass"></div><br />hw << <a href='hw.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+    <div id="tipue_search_content">hw << <a href='hw.html'>Previous</a> <a href='onshape-1.html'>Next</a> >> onshape-1<br /><h1>w6</h1>
+<br />hw << <a href='hw.html'>Previous</a> <a href='onshape-1.html'>Next</a> >> onshape-1</div>
         
     <!-- footer -->
       <div class="container">
