w6-nx-table support

--- a/content/NX.html
+++ b/content/NX.html
@@ -187,7 +187,20 @@ var winkVideoData = {
 </script>
 <div class="winkVideoContainerClass">table-2</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
-<source src="./../downloads/table-2.mp4" type="video/mp4"/></video></div><br />onshape-1 << <a href='onshape-1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+<source src="./../downloads/table-2.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass">table support-1</div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/table support.mp4" type="video/mp4"/></video></div><br />onshape-1 << <a href='onshape-1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
