--- a/content/final.html
+++ b/content/final.html
@@ -2,7 +2,7 @@
         <head>
         <title>cmsite</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link href="https://fonts.googleapis.com/css?family=Quicksand:300,400,500,700,900" rel="stylesheet">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
@@ -141,8 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w6 << <a href='w6.html'>Previous</a> <a href='NX.html'>Next</a> >> NX<br /><h1>onshape-1</h1>
-<br />w6 << <a href='w6.html'>Previous</a> <a href='NX.html'>Next</a> >> NX</div>
+    <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>final</h1>
+<br />w16 << <a href='w16.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
         
     <!-- footer -->
       <div class="container">
