--- a/content/NX.html
+++ b/content/NX.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li class='has-children'><a href='w6.html'>w6</a><ul class='dropdown'><li><a href='onshape-1.html'>onshape-1</a><li><a href='NX.html'>NX</a></li></ul><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape-2.html'>onshape-2</a><li><a href='nx.html'>nx</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='w16.html'>w16</a><li><a href='final.html'>final</a></li></ul><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='hw.html'>hw</a><ul class='dropdown'><li class='has-children'><a href='w6.html'>w6</a><ul class='dropdown'><li><a href='Onshape.html'>Onshape</a><li><a href='NX.html'>NX</a></li></ul><li><a href='w10.html'>w10</a><li><a href='w11.html'>w11</a><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='solvespace.html'>solvespace</a></li></ul><li class='has-children'><a href='w14.html'>w14</a><ul class='dropdown'><li><a href='onshape.html'>onshape</a><li><a href='nx.html'>nx</a></li></ul><li><a href='CoppeliaSim.html'>CoppeliaSim</a><li><a href='w16.html'>w16</a><li><a href='final.html'>final</a></li></ul><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">onshape-1 << <a href='onshape-1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>NX</h1>
+    <div id="tipue_search_content">Onshape << <a href='Onshape.html'>Previous</a> <a href='w10.html'>Next</a> >> w10<br /><h1>NX</h1>
 <p>column support</p>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/w6-01.mp4" type="video/mp4"/></video></div>
@@ -214,7 +214,7 @@ var winkVideoData = {
 <div class="winkVideoContainerClass">table support-2</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/table support-2.mp4" type="video/mp4"/></video></div>
-<br />onshape-1 << <a href='onshape-1.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+<br />Onshape << <a href='Onshape.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
