--- a/content/NX.html
+++ b/content/NX.html
@@ -214,7 +214,19 @@ var winkVideoData = {
 <div class="winkVideoContainerClass">table support-2</div>
 <div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/table support-2.mp4" type="video/mp4"/></video></div>
-<br />Onshape << <a href='Onshape.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass">clamp</div>
+<div class="winkVideoContainerClass"><video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/clamp.mp4" type="video/mp4"/></video></div><br />Onshape << <a href='Onshape.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
       <div class="container">
