--- a/content/NX.html
+++ b/content/NX.html
@@ -291,6 +291,18 @@ var winkVideoData = {
 </script>
 <div class="winkVideoContainerClass">motor tensioner<video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/motor tensioner.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass">Knob axle<video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/Knob axle.mp4" type="video/mp4"/></video></div>
 </div><br />Onshape << <a href='Onshape.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
