Spindle subassy L1G-nx

--- a/content/NX.html
+++ b/content/NX.html
@@ -315,6 +315,18 @@ var winkVideoData = {
 </script>
 <div class="winkVideoContainerClass">part1-1<video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
 <source src="./../downloads/part1-1.mp4" type="video/mp4"/></video></div>
+<script>
+var winkVideoData = {
+  dataVersion: 1,
+  frameRate: 8,
+  buttonFrameLength: 4,
+  buttonFrameOffset: 2,
+  frameStops: {
+  },
+};
+</script>
+<div class="winkVideoContainerClass">Spindle subassy L1G<video autoplay="autoplay" class="winkVideoClass" controls="controls" data-dirname="/cmsimde/static" data-varname="winkVideoData" height="600" muted="true" width="800">
+<source src="./../downloads/Spindle subassy L1G.mp4" type="video/mp4"/></video></div>
 </div><br />Onshape << <a href='Onshape.html'>Previous</a> <a href='w10.html'>Next</a> >> w10</div>
         
     <!-- footer -->
