--- a/config/content.htm
+++ b/config/content.htm
@@ -930,7 +930,8 @@ var winkVideoData = {
 <h2>CoppeliaSim</h2>
 <p><a href="https://www.youtube.com/watch?v=aAwwgu7igFE">單軸</a></p>
 <p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aAwwgu7igFE" width="560"></iframe></p>
-<p></p><h2>w16</h2>
+<p><a href="https://youtu.be/ZOGDupv34aA">雙軸</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZOGDupv34aA" width="560"></iframe></p><h2>w16</h2>
 <p>這個頁面 demo 如何在同一頁面下納入多個線上 Ace 編輯器與執行按鈕.</p>
 <p><button id="add1to100">w11缺考</button></p>
 <p>將 iterable 與 iterator <a href="https://home.gamer.com.tw/creationDetail.php?sn=4337438">相關說明</a>, 利用 Brython 與 Ace Editor 整理在這個頁面.</p>
