--- a/content/CoppeliaSim.html
+++ b/content/CoppeliaSim.html
@@ -142,9 +142,10 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">nx << <a href='nx.html'>Previous</a> <a href='w16.html'>Next</a> >> w16<br /><h1>CoppeliaSim</h1>
-<p><a href="https://www.youtube.com/watch?v=g-RFY7Owanc">youtube</a></p>
-<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/g-RFY7Owanc" width="560"></iframe></p>
-<br />nx << <a href='nx.html'>Previous</a> <a href='w16.html'>Next</a> >> w16</div>
+<p><a href="https://www.youtube.com/watch?v=aAwwgu7igFE">單軸</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/aAwwgu7igFE" width="560"></iframe></p>
+<p><a href="https://youtu.be/ZOGDupv34aA">雙軸</a></p>
+<p><iframe allowfullscreen="allowfullscreen" height="314" src="//www.youtube.com/embed/ZOGDupv34aA" width="560"></iframe></p><br />nx << <a href='nx.html'>Previous</a> <a href='w16.html'>Next</a> >> w16</div>
         
     <!-- footer -->
       <div class="container">
